fix layout bug

--- a/style.css
+++ b/style.css
@@ -55,10 +55,17 @@ nav a {
 
 section {
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
+  width: 100%;
 }
 p {
   line-height: 2;
+}
+.section-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 .section-title {
   opacity: 0.5;
@@ -122,12 +129,12 @@ p {
   width: 100%;
 }
 .about-content {
-  height: 100%;
   color: white;
   background-color: var(--dark-gray);
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
 }
 .about-content p {
   margin: 3rem;
@@ -142,13 +149,7 @@ p {
   justify-content: center;
   background: var(--white);
 }
-.ui-work-wrapper,
-.dev-work-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
+
 .ui-work {
   width: 250px;
   height: 250px;
@@ -190,12 +191,7 @@ p {
 .dev-works .section-title {
   color: white;
 }
-.dev-work-wrapper {
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  width: 100%;
-}
+
 .dev-work-wrapper > div {
   position: relative;
 }
@@ -255,10 +251,7 @@ p {
   background-repeat: no-repeat;
   background-size: contain;
 }
-.talks-wrapper {
-  display: flex;
-  width: 80%;
-}
+
 .talk-info {
   margin: 3rem;
 }
@@ -475,20 +468,24 @@ iframe {
     font-size: 1.5rem;
     justify-content: space-evenly;
   }
-  .about {
-    flex-direction: column;
-  }
+
   .left,
   .right {
     width: 100%;
+    height: 50%;
   }
-  .ui-work-wrapper,
-  .talks-wrapper,
-  .dev-work-wrapper {
+  .section-wrapper {
     flex-direction: column;
   }
   .contact {
     flex-direction: column;
+  }
+  .v-line {
+    height: 1px;
+    width: 3rem;
+    border: none;
+    border-bottom: 1px solid var(--white);
+    margin: 5rem;
   }
   .work-content .wrapper {
     width: 100%;
